support pointers as virtual arguments

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(synopsis synopsis.cpp)
 target_link_libraries (synopsis yomm2)
 
-# add_executable(matrix matrix.cpp)
-# target_link_libraries (matrix yomm2)
+add_executable(matrix matrix.cpp)
+target_link_libraries (matrix yomm2)
