--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,9 @@
 # -*- compile-command: "cd build ; make && ctest" -*-
 
-# CMakeLists.txt
-# Copyright (c) 2013 Jean-Louis Leroy
-# Distributed under the Boost Software License, Version 1.0. (See
-# accompanying file LICENSE_1_0.txt or copy at
-# http:#www.boost.org/LICENSE_1_0.txt)
+# Copyright (c) 2018 Jean-Louis Leroy
+# Distributed under the Boost Software License, Version 1.0.
+# See accompanying file LICENSE_1_0.txt
+# or copy at http://www.boost.org/LICENSE_1_0.txt)
 
 cmake_minimum_required (VERSION 2.6)
 
