small improvements to cmake etc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ if (NOT DEFINED(YOMM2_ENABLE_TESTS))
 endif()
 
 if (${YOMM2_ENABLE_TESTS})
-  message(STATUS "Tests enabled.")
+  message(STATUS "Tests enabled")
   include(CTest)
   add_subdirectory (tests)
   enable_testing()
@@ -46,16 +46,16 @@ if (${YOMM2_ENABLE_TESTS})
   add_test (blackbox tests/blackbox)
 endif()
 
-if (EXISTS("extern/benchmark/CMakeLists.txt"))
-  message(STATUS "Benchmarks enabled.")
+if (NOT DEFINED(YOMM2_ENABLE_BENCHMARKS))
+  set(YOMM2_ENABLE_BENCHMARKS CACHE BOOL ON)
+endif()
+
+if (${YOMM2_ENABLE_BENCHMARKS})
+  message(STATUS "Benchmarks enabled")
   set(BENCHMARK_ENABLE_TESTING CACHE BOOL OFF)
   set(BENCHMARK_ENABLE_GTEST_TESTS CACHE BOOL OFF)
   add_subdirectory(extern/benchmark)
   include_directories(extern/benchmark/include)
-  set_target_properties(benchmark PROPERTIES FOLDER Extern)
-  add_executable(benchmarks benchmarks.cpp benchmarks_vfuncs.cpp )
-  set_source_files_properties(benchmarks.cpp PROPERTIES COMPILE_FLAGS -O2)
-  target_link_libraries (benchmarks yomm2 benchmark)
 endif()
 
 INSTALL (DIRECTORY include/yorel DESTINATION include)
