enable -save-temps for benchmarks

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable(blackbox blackbox.cpp)
 target_link_libraries (blackbox yomm2)
 
 if (${YOMM2_ENABLE_BENCHMARKS})
+  set_source_files_properties(benchmarks_vfuncs.cpp PROPERTIES COMPILE_FLAGS "-save-temps")
   add_executable(benchmarks benchmarks.cpp benchmarks_vfuncs.cpp )
   target_link_libraries (benchmarks yomm2 benchmark)
 endif()
