dynamic loading example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -22,3 +22,13 @@ add_test (adventure adventure)
 add_executable(next next.cpp)
 target_link_libraries (next yomm2)
 add_test (next next)
+
+if(NOT MSVC)
+  add_executable(dl_main dl_main.cpp)
+  add_library( dl_shared SHARED dl_shared.cpp )
+  if(APPLE)
+    set_target_properties(dl_main PROPERTIES LINK_FLAGS "-Wl,-export_dynamic")
+    set_target_properties(dl_shared PROPERTIES LINK_FLAGS "-Wl,-undefined,dynamic_lookup")
+  endif()
+  target_link_libraries (dl_main yomm2 dl dl_shared)
+endif()
