run examples as tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,12 @@ if (${YOMM2_ENABLE_TESTS})
   enable_testing()
   add_test (whitebox tests/whitebox)
   add_test (blackbox tests/blackbox)
+  add_test (synopsis examples/synopsis)
+  add_test (matrix examples/matrix)
+  add_test (accept_no_visitors examples/accept_no_visitors)
+  add_test (adventure examples/adventure)
+  add_test (next examples/next)
+  add_test (asteroids examples/asteroids)
 endif()
 
 if (NOT DEFINED(YOMM2_ENABLE_BENCHMARKS))
