make dynamic link example really dynamic

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -28,11 +28,13 @@ target_link_libraries (asteroids yomm2)
 add_test (asteroids asteroids)
 
 if(NOT MSVC)
+  set(CMAKE_SKIP_BUILD_RPATH TRUE)
   add_executable(dl_main dl_main.cpp)
-  add_library( dl_shared SHARED dl_shared.cpp )
+  add_library(dl_shared SHARED dl_shared.cpp)
+  add_dependencies(dl_main dl_shared)
   if(APPLE)
     set_target_properties(dl_main PROPERTIES LINK_FLAGS "-Wl,-export_dynamic")
     set_target_properties(dl_shared PROPERTIES LINK_FLAGS "-Wl,-undefined,dynamic_lookup")
   endif()
-  target_link_libraries (dl_main yomm2 dl dl_shared)
+  target_link_libraries (dl_main yomm2 dl)
 endif()
