--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,6 +9,9 @@ target_link_libraries (whitebox yomm2)
 add_executable(blackbox blackbox.cpp)
 target_link_libraries (blackbox yomm2)
 
+add_executable(lab lab.cpp)
+target_link_libraries (lab yomm2 ${CMAKE_THREAD_LIBS_INIT})
+
 if (${YOMM2_ENABLE_BENCHMARKS})
   set_source_files_properties(benchmarks_vfuncs.cpp PROPERTIES COMPILE_FLAGS "-save-temps")
   add_executable(benchmarks benchmarks.cpp benchmarks_vfuncs.cpp )
