support befriending specializations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ if (${YOMM2_ENABLE_TESTS})
   add_test (adventure examples/adventure)
   add_test (next examples/next)
   add_test (asteroids examples/asteroids)
+  add_test (friendship examples/friendship)
 endif()
 
 if (NOT DEFINED(YOMM2_ENABLE_BENCHMARKS))
