--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -27,6 +27,10 @@ add_executable(asteroids asteroids.cpp)
 target_link_libraries (asteroids yomm2)
 add_test (asteroids asteroids)
 
+add_executable(friendship friendship.cpp)
+target_link_libraries (friendship yomm2)
+add_test (friendship friendship)
+
 if(NOT MSVC)
   set(CMAKE_SKIP_BUILD_RPATH TRUE)
   add_executable(dl_main dl_main.cpp)
