add namespace test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ if (${YOMM2_ENABLE_TESTS})
   enable_testing()
   add_test (whitebox tests/whitebox)
   add_test (blackbox tests/blackbox)
+  add_test (namespaces tests/namespaces)
   add_test (synopsis examples/synopsis)
   add_test (matrix examples/matrix)
   add_test (accept_no_visitors examples/accept_no_visitors)
