Boost made mandatory, better include_dir settings

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -34,6 +34,8 @@ if(NOT MSVC)
   set(CMAKE_SKIP_BUILD_RPATH TRUE)
   add_executable(dl_main dl_main.cpp)
   add_library(dl_shared SHARED dl_shared.cpp)
+  get_target_property(YOMM2_INCLUDE_DIRS yomm2 INTERFACE_INCLUDE_DIRECTORIES)
+  target_include_directories(dl_shared PUBLIC ${YOMM2_INCLUDE_DIRS})
   add_dependencies(dl_main dl_shared)
   if(APPLE)
     set_target_properties(dl_main PROPERTIES LINK_FLAGS "-Wl,-export_dynamic")
