benchmark: submodule -> cmake ExternalProject_Add
Unnecessary download of benchmark can be avoided with CMake.
During CMake configure, benchmark is downloaded if needed and not found.
benchmark is then built and installed during CMake configure step.
We can then use find_package with REQUIRED to use benchmark.
This is cleaner and is the suggested method by google.
https://github.com/google/googletest/blob/master/googletest/README.md
Settings for benchmark build can be set in:
benchmark_download.cmake.in.
This file is configured so use of variables from main build is possible.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,20 @@ if (${YOMM2_ENABLE_EXAMPLES})
   add_subdirectory (examples)
 endif()
 
+if (NOT DEFINED(YOMM2_ENABLE_BENCHMARKS))
+  set(YOMM2_ENABLE_BENCHMARKS CACHE BOOL ON)
+endif()
+if (${YOMM2_ENABLE_BENCHMARKS})
+  message(STATUS "Benchmarks enabled")
+  find_package(benchmark QUIET)
+  if(NOT benchmark_FOUND)
+    message(STATUS "Dependency \"benchmark\" not found in system.")
+    list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+    include(add_external_dependency)
+    add_external_dependency(benchmark)
+  endif()
+endif()
+
 if (NOT DEFINED(YOMM2_ENABLE_TESTS))
   set(YOMM2_ENABLE_TESTS CACHE BOOL ON)
 endif()
@@ -61,17 +75,6 @@ if (${YOMM2_ENABLE_TESTS})
   add_test (next examples/next)
   add_test (asteroids examples/asteroids)
   add_test (containers examples/containers/containers)
-endif()
-
-if (NOT DEFINED(YOMM2_ENABLE_BENCHMARKS))
-  set(YOMM2_ENABLE_BENCHMARKS CACHE BOOL ON)
-endif()
-if (${YOMM2_ENABLE_BENCHMARKS})
-  message(STATUS "Benchmarks enabled")
-  set(BENCHMARK_ENABLE_TESTING CACHE BOOL OFF)
-  set(BENCHMARK_ENABLE_GTEST_TESTS CACHE BOOL OFF)
-  add_subdirectory(extern/benchmark EXCLUDE_FROM_ALL)
-  include_directories(extern/benchmark/include)
 endif()
 
 ## Install instruction
