--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,5 +18,5 @@ target_link_libraries (namespaces yomm2 ${CMAKE_THREAD_LIBS_INIT})
 if (${YOMM2_ENABLE_BENCHMARKS})
   set_source_files_properties(benchmarks_vfuncs.cpp PROPERTIES COMPILE_FLAGS "-save-temps")
   add_executable(benchmarks benchmarks.cpp benchmarks_vfuncs.cpp )
-  target_link_libraries (benchmarks yomm2 benchmark)
+  target_link_libraries (benchmarks yomm2 benchmark::benchmark)
 endif()
