--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,33 +35,30 @@ endif()
 
 add_subdirectory (src)
 
-if (NOT DEFINED(YOMM2_ENABLE_EXAMPLES))
-  set(YOMM2_ENABLE_EXAMPLES CACHE BOOL ON)
-endif()
+option(YOMM2_ENABLE_EXAMPLES "Set to ON to build examples" ON)
 if (${YOMM2_ENABLE_EXAMPLES})
   message(STATUS "Examples enabled")
   add_subdirectory (examples)
 endif()
 
-if (NOT DEFINED(YOMM2_ENABLE_BENCHMARKS))
-  set(YOMM2_ENABLE_BENCHMARKS CACHE BOOL ON)
-endif()
-if (${YOMM2_ENABLE_BENCHMARKS})
-  message(STATUS "Benchmarks enabled")
-  find_package(benchmark QUIET)
-  if(NOT benchmark_FOUND)
-    message(STATUS "Dependency \"benchmark\" not found in system.")
-    list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
-    include(add_external_dependency)
-    add_external_dependency(benchmark)
-  endif()
-endif()
-
-if (NOT DEFINED(YOMM2_ENABLE_TESTS))
-  set(YOMM2_ENABLE_TESTS CACHE BOOL ON)
-endif()
+option(YOMM2_ENABLE_TESTS "Set to ON to build tests" OFF)
+include(CMakeDependentOption)
+CMAKE_DEPENDENT_OPTION(YOMM2_ENABLE_BENCHMARKS
+  "Set to ON to build benchmarks" OFF
+  "YOMM2_ENABLE_TESTS" OFF
+)
 if (${YOMM2_ENABLE_TESTS})
   message(STATUS "Tests enabled")
+  if (${YOMM2_ENABLE_BENCHMARKS})
+    message(STATUS "Benchmarks enabled")
+    find_package(benchmark QUIET)
+    if(NOT benchmark_FOUND)
+      message(STATUS "Dependency \"benchmark\" not found in system.")
+      list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+      include(add_external_dependency)
+      add_external_dependency(benchmark)
+    endif()
+  endif()
   include(CTest)
   add_subdirectory (tests)
   enable_testing()
