Dependency downloading macro improved

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,13 +51,9 @@ if (${YOMM2_ENABLE_TESTS})
   message(STATUS "Tests enabled")
   if (${YOMM2_ENABLE_BENCHMARKS})
     message(STATUS "Benchmarks enabled")
-    find_package(benchmark QUIET)
-    if(NOT benchmark_FOUND)
-      message(STATUS "Dependency \"benchmark\" not found in system.")
-      list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
-      include(add_external_dependency)
-      add_external_dependency(benchmark)
-    endif()
+    list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+    include(find_or_download_package)
+    find_or_download_package(benchmark)
   endif()
   include(CTest)
   add_subdirectory (tests)
