Improvements to find_and_download

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,8 +8,9 @@ add_library(yomm2 STATIC yomm2.cpp)
 target_include_directories(yomm2 PUBLIC
   $<BUILD_INTERFACE:${YOMM2_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
+  PUBLIC $<TARGET_PROPERTY:Boost::headers,INTERFACE_INCLUDE_DIRECTORIES>
 )
-target_include_directories(yomm2 SYSTEM PUBLIC ${Boost_INCLUDE_DIR})
+target_link_libraries(yomm2 PUBLIC Boost::headers)
 
 install(TARGETS yomm2
   EXPORT YOMM2Targets
