Fix for older CMake
Old CMake cannot create ALIAS of IMPORTED targets.
Instead create alias in regular build and always use YOMM2::yomm2.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,27 +4,27 @@
 # or copy at http://www.boost.org/LICENSE_1_0.txt)
 
 add_executable(synopsis synopsis.cpp)
-target_link_libraries (synopsis yomm2)
+target_link_libraries (synopsis YOMM2::yomm2)
 add_test (synopsis synopsis)
 
 add_executable(matrix matrix.cpp)
-target_link_libraries (matrix yomm2)
+target_link_libraries (matrix YOMM2::yomm2)
 add_test (matrix matrix)
 
 add_executable(accept_no_visitors accept_no_visitors.cpp)
-target_link_libraries (accept_no_visitors yomm2)
+target_link_libraries (accept_no_visitors YOMM2::yomm2)
 add_test (accept_no_visitors accept_no_visitors)
 
 add_executable(adventure adventure.cpp)
-target_link_libraries (adventure yomm2)
+target_link_libraries (adventure YOMM2::yomm2)
 add_test (adventure adventure)
 
 add_executable(next next.cpp)
-target_link_libraries (next yomm2)
+target_link_libraries (next YOMM2::yomm2)
 add_test (next next)
 
 add_executable(asteroids asteroids.cpp)
-target_link_libraries (asteroids yomm2)
+target_link_libraries (asteroids YOMM2::yomm2)
 add_test (asteroids asteroids)
 
 add_subdirectory (containers)
@@ -34,12 +34,12 @@ if(NOT MSVC)
   set(CMAKE_SKIP_BUILD_RPATH TRUE)
   add_executable(dl_main dl_main.cpp)
   add_library(dl_shared SHARED dl_shared.cpp)
-  get_target_property(YOMM2_INCLUDE_DIRS yomm2 INTERFACE_INCLUDE_DIRECTORIES)
+  get_target_property(YOMM2_INCLUDE_DIRS YOMM2::yomm2 INTERFACE_INCLUDE_DIRECTORIES)
   target_include_directories(dl_shared PUBLIC ${YOMM2_INCLUDE_DIRS})
   add_dependencies(dl_main dl_shared)
   if(APPLE)
     set_target_properties(dl_main PROPERTIES LINK_FLAGS "-Wl,-export_dynamic")
     set_target_properties(dl_shared PROPERTIES LINK_FLAGS "-Wl,-undefined,dynamic_lookup")
   endif()
-  target_link_libraries (dl_main yomm2 dl)
+  target_link_libraries (dl_main YOMM2::yomm2 dl)
 endif()
