--- a/cmake/ReleaseDebug/CMakeLists.txt
+++ b/cmake/ReleaseDebug/CMakeLists.txt
@@ -16,6 +16,11 @@ include(find_or_download_package)
 
 find_or_download_package(YOMM2)
 
+if (${YOMM2_ENABLE_TESTS})
+  message(STATUS "Tests enabled")
+  include(CTest)
+endif()
+
 add_subdirectory(../../examples ${CMAKE_CURRENT_BINARY_DIR}/examples)
 
 add_subdirectory(../../tests ${CMAKE_CURRENT_BINARY_DIR}/tests)
