Use c++17 like in RelDeb, DebRel builds
This fixes a warning

--- a/cmake/DebugRelease/CMakeLists.txt
+++ b/cmake/DebugRelease/CMakeLists.txt
@@ -11,6 +11,12 @@ else()
     set(CMAKE_BUILD_TYPE Release CACHE STRING "" FORCE)
 endif()
 
+if(CMAKE_COMPILER_IS_GNUCXX OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+elseif(MSVC)
+    set(CMAKE_CXX_FLAGS "/std:c++17")
+endif()
+
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/..")
 include(find_or_download_package)
 
