--- a/cmake/ReleaseDebug/CMakeLists.txt
+++ b/cmake/ReleaseDebug/CMakeLists.txt
@@ -17,16 +17,13 @@ elseif(MSVC)
     set(CMAKE_CXX_FLAGS "/std:c++17")
 endif()
 
-
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/..")
 include(find_or_download_package)
 
 find_or_download_package(YOMM2)
 
-if (${YOMM2_ENABLE_TESTS})
-  message(STATUS "Tests enabled")
-  include(CTest)
-endif()
+include(CTest)
+enable_testing()
 
 add_subdirectory(../../examples ${CMAKE_CURRENT_BINARY_DIR}/examples)
 
