--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,15 +5,19 @@
 
 add_executable(whitebox whitebox.cpp)
 target_link_libraries (whitebox YOMM2::yomm2)
+add_test (NAME whitebox COMMAND whitebox)
 
 add_executable(blackbox blackbox.cpp)
 target_link_libraries (blackbox YOMM2::yomm2)
+add_test (NAME blackbox COMMAND blackbox)
 
 add_executable(lab lab.cpp)
 target_link_libraries (lab YOMM2::yomm2 ${CMAKE_THREAD_LIBS_INIT})
+add_test (NAME lab COMMAND lab)
 
 add_executable(namespaces namespaces.cpp)
 target_link_libraries (namespaces YOMM2::yomm2 ${CMAKE_THREAD_LIBS_INIT})
+add_test (NAME namespaces COMMAND namespaces)
 
 if (${YOMM2_ENABLE_BENCHMARKS})
   set_source_files_properties(benchmarks_vfuncs.cpp PROPERTIES COMPILE_FLAGS "-save-temps")
